--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "refs",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://niick7.github.io/FinalCountdownGame",
+  "homepage": "https://niick7.github.io/final-countdown-game",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
@@ -10,7 +10,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "gh-pages-clean": "rimraf ./node_modules/.cache/gh-pages"
   },
   "dependencies": {
     "react": "^18.2.0",
